Added photos of Dr. Sumana Sinha and Ms. Urbi Basu, corrected some designations, increased heading font size.

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 				src="https://i1.rgstatic.net/ii/profile.image/1104108689858561-1640251433554_Q512/Deepsubhra-Guha-Roy.jpg"
 			>
 			<div class="name">
-				Prof. Deepsubhra Guha Roy
+				Prof. (Dr.) Deepsubhra Guha Roy
 			</div>
 			<div class="designation">
 				Dept. of CSE(AIML),CSBS
@@ -275,10 +275,10 @@
 		</div>
 		<div class="profile">
 			<img
-				src=""
+				src="Images/sumana-sinha.webp"
 			>
 			<div class="name">
-				Prof. Sumana Sinha
+				Prof. (Dr.) Sumana Sinha
 			</div>
 			<div class="designation">
 				Dept. of CSE(AIML),CSBS
@@ -331,10 +331,10 @@
 		</div>
 		<div class="profile">
 			<img
-				src=""
+				src="Images/urbi-basu.jpg"
 			>
 			<div class="name">
-				Urbi Basu
+				Ms. Urbi Basu
 			</div>
 			<div class="designation">
 				Junior Research Fellow, under supervision of Prof. Swati Chowdhuri<br>
