Modified designation of Ms. Urbi Basu, added justify alignment

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 				Ms. Urbi Basu
 			</div>
 			<div class="designation">
-				Junior Research Fellow, under supervision of Prof. Swati Chowdhuri<br>
+				Junior Research Fellow<br>
 				EEE Dept
 			</div>
 		</div>
